Update and rename application.properties to cwas-service-main.properties

--- a/cwas-service-main.properties
+++ b/cwas-service-main.properties
@@ -3,7 +3,7 @@ spring.application.name=cwas-service
 eureka.client.service-url.defaultZone=http://master:8081/eureka,http://backup:8082/eureka
 eureka.instance.prefer-ip-address=false
 eureka.instance.virtual-host-name=cwas-service
-spring.profiles.active=datasource,mybatis,redis,logging,sql,mvc,msg,cas
+#spring.profiles.active=datasource,mybatis,redis,logging,sql,mvc,msg,cas
 feign.compression.request.mime-types=text/xml,application/xml,application/json
 feign.compression.request.min-request-size=2048
 ribbon.eureka.enabled=true
