--- a/cwas-service-main.properties
+++ b/cwas-service-main.properties
@@ -1,16 +1,16 @@
-server.port=8084
-server.servlet.session.timeout=1800
-spring.application.name=cwas-service
-eureka.client.service-url.defaultZone=http://master:8081/eureka,http://backup:8082/eureka
-eureka.instance.prefer-ip-address=false
-eureka.instance.virtual-host-name=cwas-service
+#server.port=8084
+#server.servlet.session.timeout=1800
+#spring.application.name=cwas-service
+#eureka.client.service-url.defaultZone=http://master:8081/eureka,http://backup:8082/eureka
+#eureka.instance.prefer-ip-address=false
+#eureka.instance.virtual-host-name=cwas-service
 #spring.profiles.active=datasource,mybatis,redis,logging,sql,mvc,msg,cas
 feign.compression.request.mime-types=text/xml,application/xml,application/json
 feign.compression.request.min-request-size=2048
 feign.hystrix.enabled=true
 ribbon.eureka.enabled=true
 ribbon.eager-load.enabled=true
-management.endpoints.web.exposure.include=*
+#management.endpoints.web.exposure.include=*
 #server.context-path= /user
 #security.oauth2.client.client-id=user
 #security.oauth2.client.client-secret= userinfo
