--- a/cwas-service-main.properties
+++ b/cwas-service-main.properties
@@ -1,6 +1,6 @@
 server.port=8084
 server.servlet.session.timeout=1800
-spring.application.name=cwas-service
+#spring.application.name=cwas-service
 #eureka.client.service-url.defaultZone=http://master:8081/eureka,http://backup:8082/eureka
 #eureka.instance.prefer-ip-address=false
 #eureka.instance.virtual-host-name=cwas-service
